--- a/deploy/helm/trino-operator/crds/crds.yaml
+++ b/deploy/helm/trino-operator/crds/crds.yaml
@@ -632,6 +632,7 @@ spec:
                           default:
                             enableVectorAgent: null
                             containers: {}
+                          description: Logging configuration
                           properties:
                             containers:
                               additionalProperties:
@@ -639,13 +640,14 @@ spec:
                                   - required:
                                       - custom
                                   - {}
-                                description: Fragment derived from `ContainerLogConfigChoice`
+                                description: Log configuration of the container
                                 properties:
                                   console:
+                                    description: Configuration for the console appender
                                     nullable: true
                                     properties:
                                       level:
-                                        description: Log levels
+                                        description: The log level threshold. Log events with a lower log level are discarded.
                                         enum:
                                           - TRACE
                                           - DEBUG
@@ -661,14 +663,16 @@ spec:
                                     description: Custom log configuration provided in a ConfigMap
                                     properties:
                                       configMap:
+                                        description: ConfigMap containing the log configuration files
                                         nullable: true
                                         type: string
                                     type: object
                                   file:
+                                    description: Configuration for the file appender
                                     nullable: true
                                     properties:
                                       level:
-                                        description: Log levels
+                                        description: The log level threshold. Log events with a lower log level are discarded.
                                         enum:
                                           - TRACE
                                           - DEBUG
@@ -682,9 +686,10 @@ spec:
                                     type: object
                                   loggers:
                                     additionalProperties:
+                                      description: Configuration of a logger
                                       properties:
                                         level:
-                                          description: Log levels
+                                          description: The log level threshold. Log events with a lower log level are discarded.
                                           enum:
                                             - TRACE
                                             - DEBUG
@@ -697,10 +702,13 @@ spec:
                                           type: string
                                       type: object
                                     default: {}
+                                    description: Configuration per logger
                                     type: object
                                 type: object
+                              description: Log configuration per container
                               type: object
                             enableVectorAgent:
+                              description: Wether or not to deploy a container with the Vector log agent
                               nullable: true
                               type: boolean
                           type: object
@@ -4118,6 +4126,7 @@ spec:
                                 default:
                                   enableVectorAgent: null
                                   containers: {}
+                                description: Logging configuration
                                 properties:
                                   containers:
                                     additionalProperties:
@@ -4125,13 +4134,14 @@ spec:
                                         - required:
                                             - custom
                                         - {}
-                                      description: Fragment derived from `ContainerLogConfigChoice`
+                                      description: Log configuration of the container
                                       properties:
                                         console:
+                                          description: Configuration for the console appender
                                           nullable: true
                                           properties:
                                             level:
-                                              description: Log levels
+                                              description: The log level threshold. Log events with a lower log level are discarded.
                                               enum:
                                                 - TRACE
                                                 - DEBUG
@@ -4147,14 +4157,16 @@ spec:
                                           description: Custom log configuration provided in a ConfigMap
                                           properties:
                                             configMap:
+                                              description: ConfigMap containing the log configuration files
                                               nullable: true
                                               type: string
                                           type: object
                                         file:
+                                          description: Configuration for the file appender
                                           nullable: true
                                           properties:
                                             level:
-                                              description: Log levels
+                                              description: The log level threshold. Log events with a lower log level are discarded.
                                               enum:
                                                 - TRACE
                                                 - DEBUG
@@ -4168,9 +4180,10 @@ spec:
                                           type: object
                                         loggers:
                                           additionalProperties:
+                                            description: Configuration of a logger
                                             properties:
                                               level:
-                                                description: Log levels
+                                                description: The log level threshold. Log events with a lower log level are discarded.
                                                 enum:
                                                   - TRACE
                                                   - DEBUG
@@ -4183,10 +4196,13 @@ spec:
                                                 type: string
                                             type: object
                                           default: {}
+                                          description: Configuration per logger
                                           type: object
                                       type: object
+                                    description: Log configuration per container
                                     type: object
                                   enableVectorAgent:
+                                    description: Wether or not to deploy a container with the Vector log agent
                                     nullable: true
                                     type: boolean
                                 type: object
@@ -7664,6 +7680,7 @@ spec:
                           default:
                             enableVectorAgent: null
                             containers: {}
+                          description: Logging configuration
                           properties:
                             containers:
                               additionalProperties:
@@ -7671,13 +7688,14 @@ spec:
                                   - required:
                                       - custom
                                   - {}
-                                description: Fragment derived from `ContainerLogConfigChoice`
+                                description: Log configuration of the container
                                 properties:
                                   console:
+                                    description: Configuration for the console appender
                                     nullable: true
                                     properties:
                                       level:
-                                        description: Log levels
+                                        description: The log level threshold. Log events with a lower log level are discarded.
                                         enum:
                                           - TRACE
                                           - DEBUG
@@ -7693,14 +7711,16 @@ spec:
                                     description: Custom log configuration provided in a ConfigMap
                                     properties:
                                       configMap:
+                                        description: ConfigMap containing the log configuration files
                                         nullable: true
                                         type: string
                                     type: object
                                   file:
+                                    description: Configuration for the file appender
                                     nullable: true
                                     properties:
                                       level:
-                                        description: Log levels
+                                        description: The log level threshold. Log events with a lower log level are discarded.
                                         enum:
                                           - TRACE
                                           - DEBUG
@@ -7714,9 +7734,10 @@ spec:
                                     type: object
                                   loggers:
                                     additionalProperties:
+                                      description: Configuration of a logger
                                       properties:
                                         level:
-                                          description: Log levels
+                                          description: The log level threshold. Log events with a lower log level are discarded.
                                           enum:
                                             - TRACE
                                             - DEBUG
@@ -7729,10 +7750,13 @@ spec:
                                           type: string
                                       type: object
                                     default: {}
+                                    description: Configuration per logger
                                     type: object
                                 type: object
+                              description: Log configuration per container
                               type: object
                             enableVectorAgent:
+                              description: Wether or not to deploy a container with the Vector log agent
                               nullable: true
                               type: boolean
                           type: object
@@ -11150,6 +11174,7 @@ spec:
                                 default:
                                   enableVectorAgent: null
                                   containers: {}
+                                description: Logging configuration
                                 properties:
                                   containers:
                                     additionalProperties:
@@ -11157,13 +11182,14 @@ spec:
                                         - required:
                                             - custom
                                         - {}
-                                      description: Fragment derived from `ContainerLogConfigChoice`
+                                      description: Log configuration of the container
                                       properties:
                                         console:
+                                          description: Configuration for the console appender
                                           nullable: true
                                           properties:
                                             level:
-                                              description: Log levels
+                                              description: The log level threshold. Log events with a lower log level are discarded.
                                               enum:
                                                 - TRACE
                                                 - DEBUG
@@ -11179,14 +11205,16 @@ spec:
                                           description: Custom log configuration provided in a ConfigMap
                                           properties:
                                             configMap:
+                                              description: ConfigMap containing the log configuration files
                                               nullable: true
                                               type: string
                                           type: object
                                         file:
+                                          description: Configuration for the file appender
                                           nullable: true
                                           properties:
                                             level:
-                                              description: Log levels
+                                              description: The log level threshold. Log events with a lower log level are discarded.
                                               enum:
                                                 - TRACE
                                                 - DEBUG
@@ -11200,9 +11228,10 @@ spec:
                                           type: object
                                         loggers:
                                           additionalProperties:
+                                            description: Configuration of a logger
                                             properties:
                                               level:
-                                                description: Log levels
+                                                description: The log level threshold. Log events with a lower log level are discarded.
                                                 enum:
                                                   - TRACE
                                                   - DEBUG
@@ -11215,10 +11244,13 @@ spec:
                                                 type: string
                                             type: object
                                           default: {}
+                                          description: Configuration per logger
                                           type: object
                                       type: object
+                                    description: Log configuration per container
                                     type: object
                                   enableVectorAgent:
+                                    description: Wether or not to deploy a container with the Vector log agent
                                     nullable: true
                                     type: boolean
                                 type: object
