--- a/tests/test-definition.yaml
+++ b/tests/test-definition.yaml
@@ -111,6 +111,10 @@ tests:
       - opa
       - keycloak
       - openshift
+  - name: listener
+    dimensions:
+      - trino
+      - openshift
 suites:
   - name: nightly
     # Run with the latest product versions and tls true and false to cover different tls code paths.
