--- a/tests/templates/kuttl/listener/10-assert.yaml
+++ b/tests/templates/kuttl/listener/10-assert.yaml
@@ -47,9 +47,23 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
+  name: test-trino-coordinator-default-headless
+spec:
+  type: ClusterIP # cluster-internal - by trino op
+---
+apiVersion: v1
+kind: Service
+metadata:
   name: test-trino-coordinator-default-metrics
 spec:
   type: ClusterIP # cluster-internal - by trino op
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: test-trino-worker-default-headless
+spec:
+  type: ClusterIP # cluster-internal - by trino op  
 ---
 apiVersion: v1
 kind: Service
