--- a/tests/release.yaml
+++ b/tests/release.yaml
@@ -7,18 +7,18 @@ releases:
     description: Integration test
     products:
       commons:
-        operatorVersion: 0.0.0-dev
+        operatorVersion: 25.7.0-rc1
       secret:
-        operatorVersion: 0.0.0-dev
+        operatorVersion: 25.7.0-rc1
       listener:
-        operatorVersion: 0.0.0-dev
+        operatorVersion: 25.7.0-rc1
       zookeeper:
-        operatorVersion: 0.0.0-dev
+        operatorVersion: 25.7.0-rc1
       hdfs:
-        operatorVersion: 0.0.0-dev
+        operatorVersion: 25.7.0-rc1
       hive:
-        operatorVersion: 0.0.0-dev
+        operatorVersion: 25.7.0-rc1
       opa:
-        operatorVersion: 0.0.0-dev
+        operatorVersion: 25.7.0-rc1
       trino:
-        operatorVersion: 0.0.0-dev
+        operatorVersion: 25.7.0-rc1
